[gd_scene load_steps=18 format=2]

[ext_resource path="res://TerminalServer.gd" type="Script" id=1]
[ext_resource path="res://themes/terminal.tres" type="Theme" id=2]
[ext_resource path="res://themes/terminal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/EHSMB.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/DS-TERM.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/F25_Bank_Printer.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://themes/terminal_background.tres" type="StyleBox" id=7]
[ext_resource path="res://icon/icon.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=6]
size = 60
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 44
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 101
outline_size = 4
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 25
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=10]
/fonts/term_font = SubResource( 9 )
HBoxContainer/styles/terminal_background = ExtResource( 7 )
Label/colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/terminal_font = ExtResource( 3 )
Label/styles/terminal_panel = ExtResource( 7 )
Panel/styles/terminal_background = ExtResource( 7 )
VBoxContainer/styles/terminal_background = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )

[node name="TerminalServer" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBox" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GreenPanel" type="Panel" parent="CanvasLayer/HBox"]
margin_right = 237.0
margin_bottom = 900.0
rect_min_size = Vector2( 237, 0 )
rect_pivot_offset = Vector2( 237, 477 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 3 )

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/HBox/GreenPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GreenLabel" type="Label" parent="CanvasLayer/HBox/GreenPanel/VBox"]
margin_right = 237.0
margin_bottom = 61.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "SCORE"
align = 1

[node name="GreenScoreLabel" type="Label" parent="CanvasLayer/HBox/GreenPanel/VBox"]
margin_top = 65.0
margin_right = 237.0
margin_bottom = 126.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1

[node name="Players" type="VBoxContainer" parent="CanvasLayer/HBox/GreenPanel/VBox"]
margin_top = 130.0
margin_right = 237.0
margin_bottom = 640.0
size_flags_vertical = 3

[node name="GreenLabel3" type="Label" parent="CanvasLayer/HBox/GreenPanel/VBox"]
margin_top = 644.0
margin_right = 237.0
margin_bottom = 705.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "KEYS"
align = 1

[node name="GreenKeywordLabel" type="Label" parent="CanvasLayer/HBox/GreenPanel/VBox"]
margin_top = 709.0
margin_right = 237.0
margin_bottom = 770.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="GreenLabel2" type="Label" parent="CanvasLayer/HBox/GreenPanel/VBox"]
margin_top = 774.0
margin_right = 237.0
margin_bottom = 835.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "INTEL"
align = 1

[node name="GreenIntelLabel" type="Label" parent="CanvasLayer/HBox/GreenPanel/VBox"]
margin_top = 839.0
margin_right = 237.0
margin_bottom = 900.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1

[node name="Panel" type="Panel" parent="CanvasLayer/HBox"]
margin_left = 241.0
margin_right = 1159.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( -1, 1 )
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/HBox/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IPLabel" type="Label" parent="CanvasLayer/HBox/Panel/VBox"]
margin_right = 918.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 4 )
text = "Server IP:  (192.168.20.15)  (172.21.128.1)  (192.168.56.1) "
align = 1
autowrap = true

[node name="GameTimerLabel" type="Label" parent="CanvasLayer/HBox/Panel/VBox"]
margin_top = 99.0
margin_right = 918.0
margin_bottom = 203.0
custom_colors/font_color = Color( 0.752941, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0:00"
align = 1

[node name="MessageLog" type="TextEdit" parent="CanvasLayer/HBox/Panel/VBox"]
margin_top = 207.0
margin_right = 918.0
margin_bottom = 828.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Console data:
"

[node name="StatusLabel" type="Label" parent="CanvasLayer/HBox/Panel/VBox"]
margin_top = 832.0
margin_right = 918.0
margin_bottom = 846.0
text = "STATUS"

[node name="ConnectionsLabel" type="Label" parent="CanvasLayer/HBox/Panel/VBox"]
margin_top = 850.0
margin_right = 918.0
margin_bottom = 864.0
text = "CONNECTIONS"

[node name="StartGameButton" type="Button" parent="CanvasLayer/HBox/Panel/VBox"]
margin_top = 868.0
margin_right = 918.0
margin_bottom = 900.0
custom_fonts/font = SubResource( 7 )
text = "Start Game"

[node name="Icon" type="Sprite" parent="CanvasLayer/HBox/Panel/VBox"]
visible = false
position = Vector2( 418, 423 )
scale = Vector2( 0.706654, 0.706654 )
z_index = 1
texture = ExtResource( 8 )

[node name="OrangePanel" type="Panel" parent="CanvasLayer/HBox"]
margin_left = 1163.0
margin_right = 1400.0
margin_bottom = 900.0
rect_min_size = Vector2( 237, 0 )
rect_pivot_offset = Vector2( 237, 477 )
theme = SubResource( 10 )
custom_styles/panel = SubResource( 2 )

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/HBox/OrangePanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OrangeLabel" type="Label" parent="CanvasLayer/HBox/OrangePanel/VBox"]
margin_right = 237.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "SCORE"
align = 1

[node name="OrangeScoreLabel" type="Label" parent="CanvasLayer/HBox/OrangePanel/VBox"]
margin_top = 65.0
margin_right = 237.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1

[node name="Players" type="VBoxContainer" parent="CanvasLayer/HBox/OrangePanel/VBox"]
margin_top = 130.0
margin_right = 237.0
margin_bottom = 640.0
size_flags_vertical = 3

[node name="OrangeLabel3" type="Label" parent="CanvasLayer/HBox/OrangePanel/VBox"]
margin_top = 644.0
margin_right = 237.0
margin_bottom = 705.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "KEYS"
align = 1

[node name="OrangeKeywordLabel" type="Label" parent="CanvasLayer/HBox/OrangePanel/VBox"]
margin_top = 709.0
margin_right = 237.0
margin_bottom = 770.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="OrangeLabel2" type="Label" parent="CanvasLayer/HBox/OrangePanel/VBox"]
margin_top = 774.0
margin_right = 237.0
margin_bottom = 835.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "INTEL"
align = 1

[node name="OrangeIntelLabel" type="Label" parent="CanvasLayer/HBox/OrangePanel/VBox"]
margin_top = 839.0
margin_right = 237.0
margin_bottom = 900.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1

[node name="ServerDataPulse" type="Timer" parent="."]
wait_time = 4.0

[node name="WaitTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -13.983

[connection signal="pressed" from="CanvasLayer/HBox/Panel/VBox/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="timeout" from="ServerDataPulse" to="." method="_on_ServerDataPulse_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
